Initial draft of application templates with 2D and 3D viewers
Added nifti-reader-js package

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "formidable": "^2.1.1",
     "fs": "^0.0.1-security",
-    "http-server": "^14.1.1"
+    "http-server": "^14.1.1",
+    "nifti-reader-js": "^0.5.4"
   }
 }
