Added support for applications hosted at https://huggingface.co/
Instead of the built-in viewers, the applications hosted in HF will be shown instead.

In the catalogue.yaml file, the attribute 'huggingface' must be set to the page of the application: https://<user>-<application name>.hf.space
See livermask as an example.

--- a/resources/catalogue.yaml
+++ b/resources/catalogue.yaml
@@ -6,7 +6,7 @@ apps:
     description: Liver and vessel segmentation on CT.
     repository: github.com/andreped/livermask
     page: livermask.html
-    template: application_3d_viewer
+    huggingface: https://andreped-livermask.hf.space
 
   - id: 2
     name: Raidionics
